k8s/aio/deployment-aio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boot
  template:
    metadata:
      labels:
        app: boot
    spec:
      containers:
        - name: redis
          image: redis:6.0.9-alpine
          ports:
            - containerPort: 6379
        - name: pgsql
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
        - name: boot
          image: ghcr.io/diventa-pro/post-k8s-readiness-spring-boot:v0.0.3
          ports:
            - containerPort: 8080
              name: http
