k8s/aio/hello-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 90
  ports:
    - port: 8008
      name: http
      targetPort: http
  selector:
    app: boot
