k8s/aio/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: boot-backend-lb
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      name: http
      targetPort: http
  selector:
    app: boot
