k8s/aio/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: boot-backend-nodeport
spec:
  type: NodePort
  ports:
    - port: 8008
      nodePort: 30009
      name: http
      targetPort: http
  selector:
    app: boot
