k8s/aio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: boot-backend-clusterip
                port:
                  name: http
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  name: http
